--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
     "@date-io/date-fns": "1.3.13",
     "@emotion/react": "11.x",
     "@emotion/styled": "11.x",
-    "@material-ui/core": "4.12.3",
-    "@material-ui/lab": "4.0.0-alpha.60",
-    "@material-ui/pickers": "3.x.x",
+    "@mui/icons-material": "5.4.2",
+    "@mui/lab": "5.0.0-alpha.69",
     "@mui/material": "5.x",
     "@mui/styles": "5.x",
     "@prisma/client": "3.6.0",
     "blitz": "0.44.0",
     "date-fns": "2.27.0",
-    "final-form": "4.20.4",
+    "final-form": "4.20.6",
+    "final-form-arrays": "3.0.2",
     "mui-rff": "5.0.0",
     "prop-types": "15.7.2",
     "react": "18.0.0-beta-149b420f6-20211119",
     "react-dom": "18.0.0-alpha-5ca4b0433-20211020",
     "react-final-form": "6.5.7",
+    "react-final-form-arrays": "3.1.3",
     "zod": "3.11.6"
   },
   "devDependencies": {
